--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "axios": "^0.19.2",
+    "@nuxtjs/axios": "^5.11.0",
+    "cross-env": "^7.0.2",
     "element-ui": "^2.13.2",
     "nuxt": "^2.13.0",
-    "vditor": "^3.3.2",
-    "vue-axios": "^2.1.5"
+    "vditor": "^3.3.2"
   },
   "devDependencies": {}
 }
