--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "vditor": "^3.3.2"
   },
   "devDependencies": {
-    "@nuxtjs/proxy": "^2.0.0"
+    "@nuxtjs/proxy": "^2.0.0",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^8.0.2"
   }
 }
