--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.11.0",
+    "cookieparser": "^0.1.0",
     "cross-env": "^7.0.2",
     "element-ui": "^2.13.2",
     "express": "^4.17.1",
-    "nuxt": "^2.13.0",
-    "vditor": "^3.3.2"
+    "js-cookie": "^2.2.1",
+    "nuxt": "^2.13.3",
+    "vditor": "^3.3.3"
   },
   "devDependencies": {
     "@nuxtjs/proxy": "^2.0.0",
