--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "@chenfengyuan/vue-qrcode": "^1.0.2",
     "@nuxtjs/axios": "^5.12.0",
     "cookieparser": "^0.1.0",
-    "cross-env": "^7.0.2",
     "element-ui": "^2.13.2",
     "express": "^4.17.1",
     "js-cookie": "^2.2.1",
     "nuxt": "^2.14.0",
     "save-svg-as-png": "^1.4.17",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0",
     "vditor": "^3.4.1",
     "vuejs-avataaars": "^4.0.1"
   },
