--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   },
   "dependencies": {
     "@chenfengyuan/vue-qrcode": "^1.0.2",
-    "@fortawesome/fontawesome-svg-core": "^1.2.34",
-    "@fortawesome/free-brands-svg-icons": "^5.15.2",
-    "@fortawesome/free-regular-svg-icons": "^5.15.1",
-    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
+    "@fortawesome/free-regular-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/vue-fontawesome": "^2.0.2",
     "@nuxtjs/axios": "^5.13.1",
     "babel-plugin-lodash": "^3.3.4",
@@ -23,19 +23,20 @@
     "element-ui": "^2.15.1",
     "express": "^4.17.1",
     "js-cookie": "^2.2.1",
-    "nuxt": "^2.15.2",
+    "net": "^1.0.2",
+    "nuxt": "^2.15.3",
     "raw-loader": "^4.0.2",
     "save-svg-as-png": "^1.4.17",
-    "socket.io": "^2.4.1",
-    "socket.io-client": "^2.4.0",
-    "vditor": "^3.8.2",
+    "sockjs-client": "^1.5.0",
+    "stompjs": "^2.3.3",
+    "vditor": "^3.8.3",
     "vue-cropperjs": "^4.2.0",
     "vuejs-avataaars": "^4.0.1"
   },
   "devDependencies": {
     "@nuxtjs/proxy": "^2.1.0",
     "lodash-webpack-plugin": "^0.11.6",
-    "node-sass": "^4.12.0",
-    "sass-loader": "^9.0.3"
+    "node-sass": "^5.0.0",
+    "sass-loader": "^10.1.1"
   }
 }
