--- a/package.json
+++ b/package.json
@@ -11,11 +11,6 @@
   },
   "dependencies": {
     "@chenfengyuan/vue-qrcode": "^1.0.2",
-    "@fortawesome/fontawesome-svg-core": "^1.2.35",
-    "@fortawesome/free-brands-svg-icons": "^5.15.3",
-    "@fortawesome/free-regular-svg-icons": "^5.15.3",
-    "@fortawesome/free-solid-svg-icons": "^5.15.3",
-    "@fortawesome/vue-fontawesome": "^2.0.2",
     "@nuxtjs/axios": "^5.13.1",
     "babel-plugin-lodash": "^3.3.4",
     "cookieparser": "^0.1.0",
@@ -27,6 +22,7 @@
     "nuxt": "^2.15.3",
     "raw-loader": "^4.0.2",
     "save-svg-as-png": "^1.4.17",
+    "simple-icons": "^5.8.0",
     "sockjs-client": "^1.5.0",
     "stompjs": "^2.3.3",
     "vditor": "^3.8.4",
