--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "cookieparser": "^0.1.0",
     "echarts": "^4.9.0",
     "element-ui": "^2.15.6",
-    "express": "^4.17.2",
+    "express": "^4.17.3",
     "js-cookie": "^2.2.1",
+    "lodash": "^4.17.21",
     "net": "^1.0.2",
     "nuxt": "^2.15.8",
     "raw-loader": "^4.0.2",
     "save-svg-as-png": "^1.4.17",
-    "simple-icons": "^6.7.0",
+    "simple-icons": "^6.12.0",
     "sockjs-client": "^1.5.2",
     "stompjs": "^2.3.3",
     "vditor": "^3.8.11",
