--- a/package.json
+++ b/package.json
@@ -16,24 +16,24 @@
     "cookieparser": "^0.1.0",
     "echarts": "^4.9.0",
     "element-ui": "^2.15.8",
-    "express": "^4.17.3",
+    "express": "^4.18.1",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.21",
     "net": "^1.0.2",
     "nuxt": "^2.15.8",
     "raw-loader": "^4.0.2",
     "save-svg-as-png": "^1.4.17",
-    "simple-icons": "^6.19.0",
+    "simple-icons": "^6.23.0",
     "sockjs-client": "^1.6.0",
     "stompjs": "^2.3.3",
-    "vditor": "^3.8.13",
+    "vditor": "^3.8.14",
     "vue-cropperjs": "^4.2.0",
     "vuejs-avataaars": "^4.0.1"
   },
   "devDependencies": {
     "@nuxtjs/proxy": "^2.1.0",
-    "lodash-webpack-plugin": "^0.11.6",
-    "node-sass": "^5.0.0",
-    "sass-loader": "^10.2.0"
+    "less": "^4.1.2",
+    "less-loader": "^7.0.0",
+    "lodash-webpack-plugin": "^0.11.6"
   }
 }
