--- a/.onedev-buildspec.yml
+++ b/.onedev-buildspec.yml
@@ -4,6 +4,8 @@ jobs:
   steps:
   - !BuildImageStep
     name: Build Docker Image
+    buildPath: '@project_name@'
+    dockerfile: '@project_name@'
     tags: rymcu/nebula:latest
     publish: false
     condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
