--- a/.onedev-buildspec.yml
+++ b/.onedev-buildspec.yml
@@ -1,11 +1,10 @@
 version: 18
 jobs:
 - name: Build Docker Image
+  jobExecutor: internal
   steps:
   - !BuildImageStep
     name: Build Docker Image
-    buildPath: '@project_name@'
-    dockerfile: '@project_name@'
     tags: rymcu/nebula:latest
     publish: false
     condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
