--- a/.onedev-buildspec.yml
+++ b/.onedev-buildspec.yml
@@ -5,6 +5,7 @@ jobs:
   steps:
   - !BuildImageStep
     name: Build Docker Image
+    dockerfile: '@project_path@'
     tags: rymcu/nebula:latest
     publish: false
     condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
