--- a/.onedev-buildspec.yml
+++ b/.onedev-buildspec.yml
@@ -18,8 +18,7 @@ jobs:
     image: node:16.17.0-alpine
     interpreter: !DefaultInterpreter
       commands:
-      - yarn --registry=https://registry.npm.taobao.org
-      - npx nuxt build
+      - docker build -t nebula:latest .
     useTTY: false
     condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
   triggers:
@@ -32,19 +31,4 @@ jobs:
   caches:
   - key: npm-cache
     path: /root/.npm
-  timeout: 3600
-- name: Build Docker Image
-  jobExecutor: internal
-  steps:
-  - !BuildImageStep
-    name: Build Docker Image
-    dockerfile: .
-    tags: rymcu/nebula:latest
-    publish: false
-    condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
-  retryCondition: never
-  maxRetries: 3
-  retryDelay: 30
-  cpuRequirement: 250
-  memoryRequirement: 256
   timeout: 3600
