--- a/.onedev-buildspec.yml
+++ b/.onedev-buildspec.yml
@@ -18,7 +18,8 @@ jobs:
     image: node:16.17.0-alpine
     interpreter: !DefaultInterpreter
       commands:
-      - docker build -t nebula:latest .
+      - yarn --registry=https://registry.npm.taobao.org
+      - npx nuxt build
     useTTY: false
     condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
   triggers:
