--- a/package.json
+++ b/package.json
@@ -11,13 +11,12 @@
   },
   "dependencies": {
     "@chenfengyuan/vue-qrcode": "^1.0.2",
+    "@nuxtjs/auth-next": "^5.0.0-1648802546.c9880dc",
     "@nuxtjs/axios": "^5.13.1",
     "babel-plugin-lodash": "^3.3.4",
-    "cookieparser": "^0.1.0",
     "echarts": "^4.9.0",
     "element-ui": "^2.15.8",
     "express": "^4.18.1",
-    "js-cookie": "^2.2.1",
     "lodash": "^4.17.21",
     "net": "^1.0.2",
     "nuxt": "^2.15.8",
