--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "analyze": "nuxt build -a"
+    "analyze": "nuxt build -a",
+    "commit": "czg",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@chenfengyuan/vue-qrcode": "^1.0.2",
@@ -30,7 +33,13 @@
     "vuejs-avataaars": "^4.0.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.4.0",
+    "@commitlint/config-conventional": "^17.4.0",
     "@nuxtjs/proxy": "^2.1.0",
+    "conventional-changelog-cli": "^2.2.2",
+    "cz-git": "^1.4.1",
+    "czg": "^1.4.1",
+    "husky": "^8.0.3",
     "less": "^4.1.3",
     "less-loader": "^7.0.0",
     "lodash-webpack-plugin": "^0.11.6"
