--- a/package.json
+++ b/package.json
@@ -30,11 +30,14 @@
     "stompjs": "^2.3.3",
     "vditor": "^3.8.18",
     "vue-cropperjs": "^4.2.0",
-    "vuejs-avataaars": "^4.0.1"
+    "vuejs-avataaars": "^4.0.1",
+    "core-js": "^2.6.12",
+    "defu": "^5.0.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.4.0",
     "@commitlint/config-conventional": "^17.4.0",
+    "@nuxt/types": "~2.16.0",
     "@nuxtjs/proxy": "^2.1.0",
     "conventional-changelog-cli": "^2.2.2",
     "cz-git": "^1.4.1",
